{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 130,
  "lineage": "faa9c5df-fd13-0a9b-698e-563ddc2ceab3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "k8s_on_premises_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0c0dc3b4049919b",
            "arn": "arn:aws:ec2:us-east-1:669689634803:elastic-ip/eipalloc-0f0c0dc3b4049919b",
            "domain": "vpc",
            "id": "eipalloc-0f0c0dc3b4049919b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-214-202-203.compute-1.amazonaws.com",
            "public_ip": "3.214.202.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-on-premises-nat-eip"
            },
            "tags_all": {
              "Name": "k8s-on-premises-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.k8s_on_premises_igw",
            "aws_vpc.k8s_on_premises_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:669689634803:instance/i-0286c48bf4f856790",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0286c48bf4f856790",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-002cb9e6ef395a193",
            "private_dns": "ip-10-0-0-81.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.81",
            "public_ip": "184.72.169.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fe4c44b26962e5a6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011ff7d249cfa4f16",
            "tags": {
              "Name": "control-plane"
            },
            "tags_all": {
              "Name": "control-plane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e978aaf3de087602"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8s_on_premises_key_pair",
            "aws_security_group.control_plane_sg",
            "aws_subnet.k8s_on_premises_subnet_public",
            "aws_vpc.k8s_on_premises_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:669689634803:instance/i-07829803fa11b9bf2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07829803fa11b9bf2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02fc7818213945a67",
            "private_dns": "ip-10-0-0-67.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.67",
            "public_ip": "18.212.78.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b602dcbe692b3cb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011ff7d249cfa4f16",
            "tags": {
              "Name": "node-0"
            },
            "tags_all": {
              "Name": "node-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00670545267e136e3"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8s_on_premises_key_pair",
            "aws_security_group.node_sg",
            "aws_subnet.k8s_on_premises_subnet_public",
            "aws_vpc.k8s_on_premises_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:669689634803:instance/i-0abf53f36d810cb8b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abf53f36d810cb8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a9d06af2cf03d85",
            "private_dns": "ip-10-0-0-34.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.34",
            "public_ip": "3.92.51.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0059be7b648cae67e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011ff7d249cfa4f16",
            "tags": {
              "Name": "node-1"
            },
            "tags_all": {
              "Name": "node-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00670545267e136e3"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8s_on_premises_key_pair",
            "aws_security_group.node_sg",
            "aws_subnet.k8s_on_premises_subnet_public",
            "aws_vpc.k8s_on_premises_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s_on_premises_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669689634803:internet-gateway/igw-0d4819e1d02c82b37",
            "id": "igw-0d4819e1d02c82b37",
            "owner_id": "669689634803",
            "tags": {
              "Name": "k8s-on-premises-igw"
            },
            "tags_all": {
              "Name": "k8s-on-premises-igw"
            },
            "vpc_id": "vpc-03d134effea780303"
          },
          "dependencies": [
            "aws_vpc.k8s_on_premises_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "k8s_on_premises_nat_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0c0dc3b4049919b",
            "association_id": "eipassoc-05db361f64c55b155",
            "connectivity_type": "public",
            "id": "nat-02de7bb3fd19bb8d8",
            "network_interface_id": "eni-01b09da129fcc17d3",
            "private_ip": "10.0.0.189",
            "public_ip": "3.214.202.203",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-011ff7d249cfa4f16",
            "tags": {
              "Name": "k8s-on-premises-nat-gtw"
            },
            "tags_all": {
              "Name": "k8s-on-premises-nat-gtw"
            }
          },
          "dependencies": [
            "aws_eip.k8s_on_premises_nat_eip",
            "aws_internet_gateway.k8s_on_premises_igw",
            "aws_subnet.k8s_on_premises_subnet_public",
            "aws_vpc.k8s_on_premises_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "k8s_on_premises_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669689634803:network-acl/acl-0d98091c0139dd77f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d98091c0139dd77f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "669689634803",
            "subnet_ids": [
              "subnet-011ff7d249cfa4f16"
            ],
            "tags": {
              "Name": "k8s-on-premises-acl"
            },
            "tags_all": {
              "Name": "k8s-on-premises-acl"
            },
            "vpc_id": "vpc-03d134effea780303"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.k8s_on_premises_subnet_public",
            "aws_vpc.k8s_on_premises_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s_on_premises_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669689634803:route-table/rtb-0c14acddc433c6c7e",
            "id": "rtb-0c14acddc433c6c7e",
            "owner_id": "669689634803",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02de7bb3fd19bb8d8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-on-premises-rt-private"
            },
            "tags_all": {
              "Name": "k8s-on-premises-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d134effea780303"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.k8s_on_premises_nat_eip",
            "aws_internet_gateway.k8s_on_premises_igw",
            "aws_nat_gateway.k8s_on_premises_nat_gtw",
            "aws_subnet.k8s_on_premises_subnet_public",
            "aws_vpc.k8s_on_premises_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s_on_premises_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669689634803:route-table/rtb-0d77daa379f7adcea",
            "id": "rtb-0d77daa379f7adcea",
            "owner_id": "669689634803",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d4819e1d02c82b37",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-on-premises-rt-public"
            },
            "tags_all": {
              "Name": "k8s-on-premises-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d134effea780303"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.k8s_on_premises_igw",
            "aws_vpc.k8s_on_premises_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_on_premises_rt_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c80cfe2aadd71a57",
            "route_table_id": "rtb-0c14acddc433c6c7e",
            "subnet_id": "subnet-0791d0042404c263f"
          },
          "dependencies": [
            "aws_eip.k8s_on_premises_nat_eip",
            "aws_internet_gateway.k8s_on_premises_igw",
            "aws_nat_gateway.k8s_on_premises_nat_gtw",
            "aws_route_table.k8s_on_premises_rt_private",
            "aws_subnet.k8s_on_premises_subnet_private",
            "aws_subnet.k8s_on_premises_subnet_public",
            "aws_vpc.k8s_on_premises_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_on_premises_rt_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0282156508db7cf85",
            "route_table_id": "rtb-0d77daa379f7adcea",
            "subnet_id": "subnet-011ff7d249cfa4f16"
          },
          "dependencies": [
            "aws_internet_gateway.k8s_on_premises_igw",
            "aws_route_table.k8s_on_premises_rt_public",
            "aws_subnet.k8s_on_premises_subnet_public",
            "aws_vpc.k8s_on_premises_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669689634803:security-group/sg-0e978aaf3de087602",
            "description": "Firewall rules for EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e978aaf3de087602",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Calico CNI",
                "from_port": 6783,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6783
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Calico CNI",
                "from_port": 6783,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 6784
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Etcd Server Client API",
                "from_port": 2379,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kube-controller-manager",
                "from_port": 10257,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10257
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kube-scheduler",
                "from_port": 10259,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10259
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes API server",
                "from_port": 6443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "control-plane-sg",
            "name_prefix": "",
            "owner_id": "669689634803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "control-plane-sg"
            },
            "tags_all": {
              "Name": "control-plane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d134effea780303"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k8s_on_premises_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669689634803:security-group/sg-00670545267e136e3",
            "description": "Firewall rules for EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00670545267e136e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes API server",
                "from_port": 10250,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodePort Services",
                "from_port": 30000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "node-sg",
            "name_prefix": "",
            "owner_id": "669689634803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node-sg"
            },
            "tags_all": {
              "Name": "node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d134effea780303"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k8s_on_premises_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_on_premises_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669689634803:subnet/subnet-0791d0042404c263f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0791d0042404c263f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669689634803",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-on-premises-subnet-private"
            },
            "tags_all": {
              "Name": "k8s-on-premises-subnet-private"
            },
            "vpc_id": "vpc-03d134effea780303"
          },
          "dependencies": [
            "aws_vpc.k8s_on_premises_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_on_premises_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669689634803:subnet/subnet-011ff7d249cfa4f16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011ff7d249cfa4f16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "669689634803",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-on-premises-subnet-public"
            },
            "tags_all": {
              "Name": "k8s-on-premises-subnet-public"
            },
            "vpc_id": "vpc-03d134effea780303"
          },
          "dependencies": [
            "aws_vpc.k8s_on_premises_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s_on_premises_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669689634803:vpc/vpc-03d134effea780303",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08dc74192565af8ab",
            "default_route_table_id": "rtb-00ac73ff9e04fc6ea",
            "default_security_group_id": "sg-037ee44623885ea7d",
            "dhcp_options_id": "dopt-0a87acfc862e0a14f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d134effea780303",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ac73ff9e04fc6ea",
            "owner_id": "669689634803",
            "tags": {
              "Name": "k8s-on-premises-vpc"
            },
            "tags_all": {
              "Name": "k8s-on-premises-vpc"
            }
          }
        }
      ]
    }
  ]
}